# bazinga_compiler

./: .gitignore  AST.md  CMakeLists.txt  IR.md  README.md  judge.py  judge_asm.py  syntax for bzcompiler.md
IR.bak/LIR/: argument.h  constant.h  function.h  type.h  user.h  value.h
IR.bak/header/: BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRbuilder.h  Instruction.h  Module.h  Type.h
IR.bak/src/: BasicBlock.cpp  Constant.cpp  GlobalVariable.cpp  Instruction.cpp  Module.cpp
Logs/: BZCompiler 2021.7.21.md  BZCompiler 2021.7.28.md
functional_test/: 000_main  001_var_defn  002_var_defn2  003_var_defn3  004_arr_defn  005_arr_defn2  006_arr_defn3  007_arr_defn4  008_const_var_defn  009_const_var_defn2  010_const_var_defn3  011_const_array_defn  012_func_defn  013_var_defn_func  014_add  015_add2  016_addc  017_sub  018_sub2  019_subc  020_mul  021_mulc  022_div  023_divc  024_mod  025_rem  026_if  027_if2  028_if_test1  029_if_test2  030_if_test3  031_if_test4  032_if_test5  033_while_if  034_while_test1  035_while_test2  035_while_test2.sy  036_while_test3  037_break  038_continue  (+63 more)
include/: IRBuilder.h  analysis_pass_manager.h  ast.h  ast_typedef.h  bzcompiler_builder.hpp  lexical_analyzer.h  parser.h  pass_manager.h  syntax_tree.h
include/ASMIR/: ASMBuilder.h  ASMcodeprinter.h  ASValue.hpp  BBOrderGenerator.h  RegAllocMapper.h  SimpleASMPrinter.h  SsaAsmPrinter.h
include/IR/: BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRbuilder.h  IRprinter.h  Instruction.h  Module.h  Type.h  User.h  Value.h
include/LIR/: basic_block.h  global_variable.h
include/codegen/: ASMBuilder.h  LinearScanSSA.h  codegen.h  instgen.h  instructiongen.h
include/pass/: CFG.h  CFG_simply.h  CodeElimination.h  GVN.h  Inline.hpp  MemAnalysis.h  SCPcombineDCE.h  Sink.h  active_vars.h  combining.h  dominator.h  get_ptr_simply.h  global2local.h  loop_expansion.h  loop_flatten.h  loop_search.h  loop_strength_reduce.h  mem2reg.h  pass.h  power_sum.h  reassociate.h  zero_and_one_elimination.h
performance_test/: transpose0.sy
src/: ast.cpp  compiler.cpp  lex2.cpp  lexical_analyzer.l  parser.y  pass_manager.cpp
src/ASMIR/: ASMBuilder.cpp  ASMPrinter.cpp  ASMcodeprinter.cpp  ASValue.cpp  BBOrderGenerator.cpp  RegAllocMapper.cpp  SsaAsmPrinter.cpp
src/IR/: BasicBlock.c++  BasicBlock.cpp  Constant.c++  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp
src/IRbuilder/: bzcompiler.cpp  bzcompiler_builder.cpp
src/codegen/: codegen.cpp  instgen.cpp  instructiongen.cpp  linearScanOnSSA.cpp  regAlloc.cpp
src/pass/: CFG.cpp  CFG_simply.cpp  CodeElimination.cpp  GVN.cpp  Inline.cpp  SCPcombineDCE.cpp  Sink.cpp  active_vars.cpp  combining.cpp  dominator.cpp  global2local.cpp  loop_expansion.cpp  loop_flattern.cpp  loop_search.cpp  loop_strength_reduce.cpp  mem2reg.cpp  power_sum.cpp  reassociate.cpp  ssa.cpp  zero_and_one_elimination.cpp
src/phase2/: analyzer.l  parser.y
src/runtime/: CMakeLists.txt  sylib.c
src/test/: test_lexer.cpp  test_parser.cpp
